# submodule_cray

./: CMakeLists.txt
src/: main.f90  module.f90  submodule.f90
